# claude-tracking

./: .gitignore  CLAUDE.md  README.md  plan.html  pyproject.toml  server.py  setup.py  track.py  tui.py
claude_tracking/: cli.py  dashboard.html  server.py  setup_hooks.py  track.py  tui.py
claude_tracking/skills/: name.md  pending.md
projects/: container-transcripts.md  polish-ux.md  priority-sessions.md  tui-tiled-view.md
